--- a/public/ui/iCMS-6.0.0.css
+++ b/public/ui/iCMS-6.0.0.css
@@ -121,14 +121,15 @@ a:hover { text-decoration: none }
 .posa { position: absolute }
 .ft6 { color: #666 }
 .fta { color: #aaa }
+.placeholder {color: #222}
 i { text-align: center }
 .iCMS-icon { width: 16px; height: 16px; background-image: url(img/sprites-1.9.1.png); background-repeat: no-repeat; display: inline-block; vertical-align: middle }
 .iCMS-icon-comment-like { background-position: -222px -92px }
 a:hover>.iCMS-icon-comment-reply { background-position: -250px -79px }
 .iCMS-icon-comment-reply { background-position: -250px -92px }
 a:hover>.iCMS-icon-comment-like { background-position: -222px -79px }
-.iCMS-icon-no-help { background-position: -71px -183px }
-a:hover>.iCMS-icon-no-help { background-position: -71px -170px }
+.iCMS-icon-report { background-position: -71px -183px }
+a:hover>.iCMS-icon-report { background-position: -71px -170px }
 .iCMS-icon-spike { position: absolute; top: -8px; left: 23px; width: 13px; height: 8px; background-position: -200px -165px }
 a, a:hover, a:focus { color: #057AFD }
 /* bootstrap */
@@ -249,7 +250,7 @@ a.noneline { text-decoration: none !important; }
 .iCMS-cmt-command { text-align: right }
 .iCMS-cmt-command .cmt-add { float: right; margin: 8px 0px 8px 8px; padding: 5px 10px }
 .iCMS-cmt-command .cmt-cancel { float: right; margin: 15px 15px 0 0; cursor: pointer }
-#iCMS-comment-report { display: none }
+#iCMS-comment-report { display: none;padding: 10px;}
 .report_dialog { }
 .report_dialog.loading .modal-dialog-buttons { display: none }
 .report_dialog .options { margin-top: 8px }
@@ -274,34 +275,34 @@ a.noneline { text-decoration: none !important; }
 /*===========commentApp===========*/
 .spinner-gray, .spinner-lightgray { display: inline-block; margin: 0 5px; width: 14px; height: 15px; vertical-align: -3px; background-size: 14px 15px; background-repeat: no-repeat; background-image: url(/img/grey-loading.gif); }
 .spinner-lightgray { background-image: url(img/lightgray-loading.gif); }
-.commentApp-box { margin: 10px 0 0 35px; background: #fff; max-width: 540px; position: relative; border: 1px solid #ddd; border-radius: 4px; box-shadow: 0 1px 1px rgba(0, 0, 0, .05) }
-.commentApp-box .load-more { padding: 8px 0; display: block; font-size: 13px; height: 22px; text-align: center; border: 1px solid #eee; border-width: 1px 0 0; color: #698ebf; box-shadow: 0 0 5px rgba(180, 180, 180, .1) inset; text-shadow: 0 1px 0 #fff }
-.commentApp-box .load-more .text { position: relative }
-.commentApp-box .load-more .spinner { position: absolute; top: 0; right: -20px; display: none }
-.commentApp-box .load-more.loading .spinner { display: block }
-html.no-touch .commentApp-box .load-more:hover { background: #fefefe; text-decoration: none }
-.commentApp-box .load-more:active { background: #fbfbfb; box-shadow: 0 0 5px rgba(180, 180, 180, .2) inset }
-.commentApp-box .load-more+.commentApp-item { margin: 0; padding: 8px 12px; border-top: 1px solid #eee }
-.commentApp-box .commentApp-bubble { position: absolute; top: -8px; left: 81px; display: none }
-.commentApp-box.empty { border: 0; box-shadow: none }
-.commentApp-box.empty.cannot-comment { border: 1px solid #ddd }
-.commentApp-box.cannot-comment .editable, .commentApp-box.cannot-comment .app-command, .commentApp-box.cannot-comment .commentApp-op-link.reply { display: none !important }
-.commentApp-box.empty .commentApp-bubble { display: none !important }
-.commentApp-box.empty.cannot-comment .commentApp-bubble { display: block !important }
-.commentApp-box.empty .commentApp-box-ft { margin: 0 30px 0 0; padding: 0; border: 0 !important; background: 0 }
-.commentApp-box.empty.cannot-comment .commentApp-form { margin: 0 }
-.commentApp-box.empty.cannot-comment .commentApp-form, .commentApp-box .commentApp-form { padding: 15px }
-.commentApp-box.empty.cannot-comment .commentApp-box-ft, .commentApp-box .commentApp-box-ft { background: #fbfbfb; border-radius: 0 0 4px 4px; border-top: 1px solid #EEE; position: relative }
-.commentApp-box.empty.cannot-comment .commentApp-box-ft { background: #fff }
+.commentApp-list-wrap { margin: 10px 0 0 35px; background: #fff; max-width: 540px; position: relative; border: 1px solid #ddd; border-radius: 4px; box-shadow: 0 1px 1px rgba(0, 0, 0, .05) }
+.commentApp-list-wrap .load-more { padding: 8px 0; display: block; font-size: 13px; height: 22px; text-align: center; border: 1px solid #eee; border-width: 1px 0 0; color: #698ebf; box-shadow: 0 0 5px rgba(180, 180, 180, .1) inset; text-shadow: 0 1px 0 #fff }
+.commentApp-list-wrap .load-more .text { position: relative }
+.commentApp-list-wrap .load-more .spinner { position: absolute; top: 0; right: -20px; display: none }
+.commentApp-list-wrap .load-more.loading .spinner { display: block }
+html.no-touch .commentApp-list-wrap .load-more:hover { background: #fefefe; text-decoration: none }
+.commentApp-list-wrap .load-more:active { background: #fbfbfb; box-shadow: 0 0 5px rgba(180, 180, 180, .2) inset }
+.commentApp-list-wrap .load-more+.commentApp-item { margin: 0; padding: 8px 12px; border-top: 1px solid #eee }
+.commentApp-list-wrap .commentApp-bubble { position: absolute; top: -8px; left: 81px; display: none }
+.commentApp-list-wrap.empty { border: 0; box-shadow: none }
+.commentApp-list-wrap.empty.cannot-comment { border: 1px solid #ddd }
+.commentApp-list-wrap.cannot-comment .editable, .commentApp-list-wrap.cannot-comment .cmt-command, .commentApp-list-wrap.cannot-comment .commentApp-op-link.reply { display: none !important }
+.commentApp-list-wrap.empty .commentApp-bubble { display: none !important }
+.commentApp-list-wrap.empty.cannot-comment .commentApp-bubble { display: block !important }
+.commentApp-list-wrap.empty .commentApp-list-wrap-ft { margin: 0 30px 0 0; padding: 0; border: 0 !important; background: 0 }
+.commentApp-list-wrap.empty.cannot-comment .commentApp-form { margin: 0 }
+.commentApp-list-wrap.empty.cannot-comment .commentApp-form, .commentApp-list-wrap .commentApp-form { padding: 15px }
+.commentApp-list-wrap.empty.cannot-comment .commentApp-list-wrap-ft, .commentApp-list-wrap .commentApp-list-wrap-ft { background: #fbfbfb; border-radius: 0 0 4px 4px; border-top: 1px solid #EEE; position: relative }
+.commentApp-list-wrap.empty.cannot-comment .commentApp-list-wrap-ft { background: #fff }
 .commentApp-spinner { padding: 6px 12px; font-size: 13px; }
 .commentApp-item { position: relative; margin: 0 12px; padding: 8px 0 }
 .commentApp-item .commentApp-content-wrap { margin: 0 0 0 35px }
-.commentApp-item>.app-item-link-avatar { float: left; margin: 4px 0 0 }
-.commentApp-item .app-item-img-avatar { width: 25px; height: 25px; border-radius: 2px }
+.commentApp-item>.cmt-item-link-avatar { float: left; margin: 4px 0 0 }
+.commentApp-item .cmt-item-img-avatar { width: 25px; height: 25px; border-radius: 2px }
 .commentApp-item .commentApp-content { color: #222; min-height: 22px }
-.commentApp-item .commentApp-hd, .commentApp-item .commentApp-ft { color: #999 }
-.commentApp-item .commentApp-hd .desc, .commentApp-item .commentApp-ft .desc { font-size: 12px }
-.commentApp-item .commentApp-ft { font-size: 12px }
+.commentApp-item .commentApp-content-hd, .commentApp-item .commentApp-content-ft { color: #999 }
+.commentApp-item .commentApp-content-hd .desc, .commentApp-item .commentApp-content-ft .desc { font-size: 12px }
+.commentApp-item .commentApp-content-ft { font-size: 12px }
 .commentApp-item .like-num { float: right; margin-top: -1px }
 .commentApp-item .like-num>span, .commentApp-item .like-num>em { font-style: normal; vertical-align: -2px }
 .commentApp-item .like-num.nil { display: none }
@@ -309,19 +310,19 @@ html.no-touch .commentApp-box .load-more:hover { background: #fefefe; text-decor
 .commentApp-item+.commentApp-item { border-top: solid 1px #eee }
 .commentApp-item .commentApp-form { padding: 15px 0 }
 .commentApp-info { text-align: center }
-.commentApp-form .commentApp-textarea { padding: 7px 8px; color: #999; font-size: 13px; line-height: 22px; min-height: 22px; width: 95% }
-.commentApp-form.expanded .app-command { display: block; line-height: 33px; }
-.commentApp-form .app-command { display: none; padding: 10px 0; text-align: right }
-.commentApp-form .app-command .btn-primary { float: right; }
-.commentApp-form .app-command .app-command-cancel { float: right; }
+.commentApp-form .commentApp-textarea { padding: 7px 8px; color: #222; font-size: 13px; line-height: 22px; min-height: 22px; width: 95% }
+.commentApp-form.expanded .cmt-command { display: block; line-height: 33px; }
+.commentApp-form .cmt-command { display: none; padding: 10px 0; text-align: right }
+.commentApp-form .cmt-command .btn-primary { float: right; }
+.commentApp-form .cmt-command .cmt-command-cancel { float: right; }
 .with-self-avatar .commentApp-form .avatar { display: block }
 .commentApp-form .avatar { float: left; display: none; margin: 2px 10px 0 0; width: 34px; height: 34px; border-radius: 4px }
 .commentApp-form .avatar+.editable { overflow: hidden }
 .commentApp-op-link { margin-left: .5em; color: #999; font-size: 12px; visibility: hidden }
-.app-command-cancel { margin: 0 15px 0 0; cursor: pointer; float: left; }
-.app-command-cancel:hover { text-decoration: underline }
+.cmt-command-cancel { margin: 0 15px 0 0; cursor: pointer; float: left; }
+.cmt-command-cancel:hover { text-decoration: underline }
 .commentApp-op-link>.iCMS-icon { margin-right: 5px; width: 11px; height: 11px; vertical-align: -1px }
 
-#iCMS-comment-list-box .commentApp-box{ margin:2px; background: #fff;position: relative; border:none;max-width: 99%;}
-#iCMS-comment-list-box .app-item-img-avatar { width: 36px; height: 36px; border-radius: 2px;box-shadow: 0 1px 3px rgba(0,0,0,0.22);padding: 2px;}
+#iCMS-comment-list-box { margin:2px; background: #fff;position: relative; border:none;max-width: 99%;}
+#iCMS-comment-list-box .cmt-item-img-avatar { width: 36px; height: 36px; border-radius: 2px;box-shadow: 0 1px 3px rgba(0,0,0,0.22);padding: 2px;}
 #iCMS-comment-list-box .commentApp-content-wrap{margin: 0 0 0 48px}
