--- a/template/iCMS/comment/form.iframe.htm
+++ b/template/iCMS/comment/form.iframe.htm
@@ -1,4 +1,4 @@
 <iframe scrolling="no" frameborder="0" marginheight="0" marginwidth="0" border="0"
 class="iCMS-API-iframe commentApp-form-iframe"
-style="<!--{$style}-->"
-src="<!--{iCMS:router url='/api' query=$vars.query}-->"></iframe>
+style="<!--{$comment_vars.style}-->"
+src="<!--{iCMS:router url='/api' query=$comment_vars.query}-->"></iframe>
