--- a/template/default/header.htm
+++ b/template/default/header.htm
@@ -8,7 +8,7 @@
       </div>
       <div class="nav_profile" id="iCMS-nav-profile">
         <!--{include file="iCMS://user/topnavbar.htm"}-->
-        <span><a href="<!--{iCMS:router url='/user/publish'}-->"><i class="fa fa-edit"></i> 发表文章</a></span>
+        <span><a href="<!--{iCMS:router url='/user/publish'}-->" target="_blank"><i class="fa fa-edit"></i> 发表文章</a></span>
       </div>
       <div class="clearfix mb5"></div>
       <form class="form-inline" action="<!--{iCMS:router url='/api/search'}-->">
