--- a/public/ui/iCMS-6.0.0.css
+++ b/public/ui/iCMS-6.0.0.css
@@ -203,7 +203,7 @@ a.noneline { text-decoration: none !important; }
 .iconfont { font-family: "iconfont" !important; font-size: 16px; font-style: normal; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale }
 /* ==iCMS== */
 /* ==pagination== */
-.iCMS-pagination { margin: 10px; clear: both; height: 30px; position: relative; text-align: center }
+.iCMS-pagination { margin: 10px; clear: both; max-height: 30px; position: relative; text-align: center }
 .iCMS-pagination a, .iCMS-pagination span { display: inline-block; padding: 4px 12px; line-height: 20px; text-decoration: none; background-color: #fff; border: 1px solid #ddd; border-left-width: 0 }
 .iCMS-pagination a:hover, .iCMS-pagination a:focus { background-color: #f5f5f5 }
 .iCMS-pagination a.page_nowindex { color: #999; cursor: default }
@@ -323,6 +323,6 @@ html.no-touch .commentApp-list-wrap .load-more:hover { background: #fefefe; text
 .cmt-command-cancel:hover { text-decoration: underline }
 .commentApp-op-link>.iCMS-icon { margin-right: 5px; width: 11px; height: 11px; vertical-align: -1px }
 
-#iCMS-comment-list-box { margin:2px; background: #fff;position: relative; border:none;max-width: 99%;}
+#iCMS-comment-list-box { margin:2px; background: #fff;position: relative; border:none;max-width: 99%;box-shadow:none;}
 #iCMS-comment-list-box .cmt-item-img-avatar { width: 36px; height: 36px; border-radius: 2px;box-shadow: 0 1px 3px rgba(0,0,0,0.22);padding: 2px;}
 #iCMS-comment-list-box .commentApp-content-wrap{margin: 0 0 0 48px}
