--- a/template/iCMS/comment/list.iframe.htm
+++ b/template/iCMS/comment/list.iframe.htm
@@ -1,3 +1,3 @@
 <iframe scrolling="no" frameborder="0" marginheight="0" marginwidth="0" border="0"
 class="iCMS-API-iframe commentApp-list-iframe"
-src="<!--{iCMS:router url='/api' query=$vars.query}-->"></iframe>
+src="<!--{iCMS:router url='/api' query=$comment_vars.query}-->"></iframe>
